updated the css for theme variable

--- a/src/app/shared/ui/app-header/app-header.component.html
+++ b/src/app/shared/ui/app-header/app-header.component.html
@@ -70,7 +70,7 @@
           <span class="app-header__profile-name">{{ userInitials }}</span>
           <span class="app-header__profile-role">{{ userRole }}</span>
         </div>
-        <mat-icon>keyboard_arrow_down</mat-icon>
+        <mat-icon class="app-header__profile-arrow">keyboard_arrow_down</mat-icon>
       </div>
     </app-dropdown-popover>
   </div>
